apply plugin : 'java'
apply plugin : 'eclipse'
apply plugin : 'application'

mainClassName="com.njd5475.github.slim.view.SlimIDE"
sourceCompatibility = 1.8
targetCompatibility = 1.8

repositories {
    mavenCentral()
}

dependencies {
  implementation 'com.eclipsesource.minimal-json:minimal-json:0.9.4'
  testImplementation group: 'org.mockito', name: 'mockito-all', version: '1.8.4'
  testImplementation group: 'junit', name: 'junit', version: '4.+'
}

test {
     jvmArgs '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
 }

jar {
  archiveBaseName = "slim-ide"
  archiveVersion = '0.0.1'
  manifest {
  	attributes 'Main-Class': "$mainClassName"
  }
  from {
    configurations.compileClasspath.collect { it.isDirectory() ? it : zipTree(it) }
  }
}

